<resources>
    <string name="app_name">Photo Market List</string>
    <string name="button_addPlacemark">Add Item</string>
    <string name="hint_placemarkTitle">Item Name</string>
    <string name="hint_placemarkDescription">Price</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a item Name </string>
    <string name="save_placemark"> Save item </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select item image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="placemark_image">placemark image</string>
    <string name="button_location">Set Supermarket Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deletePlacemark">Delete</string>
</resources>
